# ai-dev-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_TARGET.md  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  info.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: health.py
app/api/routes/diagnostics/: gitlab.py  jira.py  llm.py  mattermost.py
app/api/routes/manual/: code_review.py  codebase_consultation.py
app/application/skills/code_review/: context_builder.py  prompts.py  schemas.py  workflow.py
app/application/skills/codebase_consultation/: __init__.py  prompts.py  schemas.py  workflow.py
app/components/code_search/: __init__.py  chunker.py  embeddings.py  indexer.py  models.py  retriever.py  vector_store.py
app/components/diff/: localizer.py
app/components/llm/: structured_client.py
app/components/review/: comment_publisher.py
app/core/: config.py  logging.py
app/domain/: reviews.py
app/infrastructure/gitlab/: client.py
app/infrastructure/jira/: client.py
app/infrastructure/mattermost/: client.py
app/schemas/: api.py
