[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-agent"
version = "0.1.0"
description = "AI development agent MVP"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "requests",
    "openai",
    "pydantic",
    "qdrant-client",
    "tree-sitter",
    "tree-sitter-language-pack==0.13.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
